--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,9 +1,11 @@
-@import url(styles/header.css);
+@import url(Header.css);
 :root{
 --cor-de-fundo: #9949B4;
 --cor-cabecalho: #FFFFFF;
 }
+
 body{
 background-color: var(--cor-de-fundo);
 margin: 0;
 }
+
